[package]
name = "gfapi-sys"
description = "This crates provides FFI bindings for Gluster's API"
version = "0.2.3"
authors = ["Chris Holcombe <chris.holcombe@canonical.com>"]
repository = "https://github.com/gluster/Gfapi-sys"
documentation = "https://docs.rs/gfapi-sys"
license = "MIT"

[dependencies]
errno = "^0.2"
libc = "^0.2"
