[package]
name = "gfapi-sys"
description = "This crates provides FFI bindings for Gluster's API"
version = "0.2.2"
authors = ["Chris Holcombe <chris.holcombe@canonical.com>"]
repository = "https://github.com/cholcombe973/Gfapi-sys"
license = "MIT"

[dependencies]
errno = "^0.2"
libc = "^0.2"
libffi = "^0.4"
