[package]
name = "gfapi-sys"
description = "This crates provides FFI bindings for Gluster's API"
version = "1.0.2"
authors = ["Chris Holcombe <chris.holcombe@canonical.com>"]
repository = "https://github.com/gluster/Gfapi-sys"
documentation = "https://docs.rs/gfapi-sys"
license = "MIT"

[dependencies]
errno = "^0.2"
libc = "^0.2"
log = "~0.3"
uuid = {version="0.6", features=["std"]}

[badges]
travis-ci = { repository = "gluster/Gfapi-sys" }


[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false        # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                   # `codegen-units` is ignored when `lto = true`
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'

[[bin]]
doc = true
name = "main"
path = "examples/main.rs"
